# Codediff-ocr

./: .gitignore  main.py  pyproject.toml  state.json  test.py
app/cli/: __init__.py  build_dataset.py  fetch_data.py  save_cookies.py  test_crawler.py  train.py
app/crawlers/: __init__.py  accoding.py  atcoder.py  codeforces.py  loj.py  luogu.py
app/utils/: rich_logging.py  text.py
cli/: __init__.py  build_dataset.py  fetch_data.py  save_cookies.py  test_crawler.py  train.py
crawlers/: __init__.py  accoding.py  atcoder.py  codeforces.py  loj.py  luogu.py
dataset/crawlers/: __init__.py  accoding.py  atcoder.py  codeforces.py  common.py  loj.py  luogu.py
richlog/: __init__.py  handlers.py
utils/: rich_logging.py  rich_tqdmpatch.py  richlog.py  text.py  web.py
