[project]
name = "statement-ocr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "dataset>=1.6.2",
    "markdownify>=1.2.2",
    "mistune>=3.1.4",
    "pillow>=12.0.0",
    "playwright>=1.57.0",
    "pylatexenc>=2.10",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "transformers>=4.57.3",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
