[project]
name = "statement-ocr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "bitsandbytes>=0.49.0",
    "click>=8.3.1",
    "datasets>=4.4.2",
    "markdownify>=1.2.2",
    "mistune>=3.1.4",
    "peft>=0.18.0",
    "pillow>=12.0.0",
    "playwright>=1.57.0",
    "pylatexenc>=2.10",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "tensorboardx>=2.6.4",
    "torchvision>=0.24.1",
    "transformers>=4.57.3",
    "trl>=0.26.2",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
